# liquidlean

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  liquidlean.cabal
adrs/: ADR-000-Truth-Status.md  ADR-001-Language-Closure.md  ADR-002-HOC-Definition.md  ADR-003-No-Target-Axiom.md  ADR-004-Exact-Arithmetic.md  ADR-005-Generated-Source-Provenance.md  ADR-006-Liquid-Trust-Boundary.md  ADR-007-Certificate-Independence.md  ADR-008-Thermal-Meaning.md  ADR-009-Polynomial-Representation.md  ADR-010-Jacobian-Statement.md  ADR-011-Restricted-Claims.md  ADR-012-Partial-Function-Ban.md  ADR-013-Open-Gap-Exposure.md  ADR-014-Final-Claim-Gate.md
src/LiquidLean/: Compiler.hs  QuantumPiper.hs
src/LiquidLean/Certificate/: Format.hs  Parser.hs  Replay.hs  Validate.hs
src/LiquidLean/Compiler/: IBM.hs
src/LiquidLean/Constraint/: Certificate.hs  Closure.hs  Substitution.hs  Syntax.hs  Unification.hs
src/LiquidLean/HOC/: Diagnostic.hs  Lexer.hs  Parser.hs  Pretty.hs  Syntax.hs  Token.hs
src/LiquidLean/Jacobian/: Affine.hs  AlgebraicGeometry.hs  BlockDecomposition.hs  CrackTheorem3.hs  DimensionOne.hs  FullAttempt.hs  KeyLemmaAttempt.hs  MasterProof.hs  MoraLocal.hs  SingularityAnalysis.hs  Statement.hs  Theorem3Kernel.hs  Triangular.hs  UnivariateInversion.hs
src/LiquidLean/Polynomial/: Jacobian.hs  Monomial.hs  Natural.hs  Polynomial.hs  Rational.hs
src/LiquidLean/Refinement/: Environment.hs  Judgment.hs  Predicate.hs  Subtyping.hs  Value.hs
src/LiquidLean/Thermal/: Energy.hs  Laws.hs  Monad.hs
